# CMake_MLIR_Toy

./: CMakeLists.txt  README.md
Ch1/: CMakeLists.txt
Ch2/: CMakeLists.txt
Ch2/include/toy/: Ops.cpp.inc  Ops.h.inc  run.sh
Ch3/: CMakeLists.txt
Ch3/include/toy/: CMakeLists.txt  Ops.cpp.inc  Ops.h.inc
Ch3/mlir/: ToyCombine.inc  run.sh
Ch4/: CMakeLists.txt
Ch4/include/toy/: CMakeLists.txt  Ops.cpp.inc  Ops.h.inc
Ch5/: CMakeLists.txt
Ch5/include/: run.sh
Ch5/include/toy/: CMakeLists.txt  Dialect.h.inc  Ops.cpp.inc
Ch6/: CMakeLists.txt
Ch6/include/toy/: CMakeLists.txt  Dialect.cpp.inc  Ops.h.inc  ShapeInferenceOpInterfaces.h.inc
Ch7/: CMakeLists.txt
Ch7/include/toy/: CMakeLists.txt  Dialect.h.inc  Ops.cpp.inc  Ops.h.inc
Ch7/mlir/: ToyCombine.inc
